--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
+
+.nutrition-label {
+	color: black;
+	width: 100%;
+}
+
+
+.image {
+  width: 250px;
+  float: left;
+  margin: 20px;
+}
+nutrition-label {
+  font-size: small;
+  line-height: 1.4;
+}
+
+
+.image {
+  width: 250px;
+  float: left;
+  margin: 20px;
+}
+p {
+  margin: 0;
+}
+
+.footer {
+  text-align: center;
+  padding: 2px;
+}
